# agent-odometer

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
src/: App.svelte  app.css  dev-mock.ts  main.ts
src-tauri/: Cargo.toml  rates.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_parser.rs  commands.rs  config.rs  config_events.rs  correlation.rs  git_outcomes.rs  lib.rs  main.rs  model.rs  parser.rs  performance.rs  rates.rs  scan_cache.rs  scanner.rs  session_index.rs  store.rs  telemetry.rs  tray.rs  watcher.rs
src-tauri/tests/: claude_parser_tests.rs  parser_tests.rs  scan_cache_tests.rs
src-tauri/tests/fixtures/: agent-fixture123.jsonl  claude-session.jsonl  sample-session.jsonl
src/components/: ConfigTimeline.svelte  DetailPane.svelte  Filters.svelte  GitOutcomes.svelte  RowDrawer.svelte  SessionsView.svelte  SettingsView.svelte  Sparkline.svelte
src/lib/: credits.ts  dateRange.ts  ipc.ts  performance.ts  sessionProjection.ts  types.ts
src/lib/stores/: config.ts  rates.ts  scan.svelte.ts  sessions.svelte.ts  sessions.ts  theme.svelte.ts  updater.svelte.ts
