[package]
name = "agent-odometer"
version = "0.4.4"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "odometer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "agent-odometer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
chrono         = { version = "0.4", features = ["serde"] }
notify         = "8"
notify-debouncer-full = "0.6"   # pairs with notify 8.x
dashmap        = "6"
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs           = "5"
walkdir        = "2"
rayon          = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
